dist/LineScript-win64-20260616/tests/cases/compile_fail/operator_method_bad_arity.lsc
class BadOps do
  fn operator +(a: i64, b: i64) -> i64 do
    return a + b
  end
end
